melior/src/dialect/snapshots/melior__dialect__func__tests__compile_call.snap
---
source: melior/src/dialect/func.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    call @foo() : () -> ()
    return
  }
}

