melior/src/dialect/snapshots/melior__dialect__func__tests__compile_external_function.snap
---
source: melior/src/dialect/func.rs
expression: module.as_operation()
---
module {
  func.func private @foo(index) -> index
}

