melior/src/dialect/snapshots/melior__dialect__func__tests__run_on_function_in_nested_module.snap
---
source: melior/src/dialect/func.rs
expression: module.as_operation()
---
module {
  func.func @add(%arg0: index) -> index {
    return %arg0 : index
  }
}

